delete watches beforehand so we don't hit resource limit

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:addon": "yarn workspace @hashicorp/consul-ui-toolkit run start",
     "start:documentation": "yarn workspace documentation run start",
     "test": "yarn workspaces run test",
-    "watch:toolkit": "watchman-make -p '**/toolkit/src/**' -t build"
+    "watch:toolkit": "watchman watch-del-all && watchman-make -p '**/toolkit/src/**' -t build"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
