--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -53,7 +53,6 @@
     "@babel/plugin-transform-typescript": "^7.22.10",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
-    "@hashicorp/design-system-components": "^2.13.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@tsconfig/ember": "^3.0.0",
     "@types/ember": "^4.0.3",
@@ -76,6 +75,9 @@
     "rollup-plugin-ts": "3.2.0",
     "sass": "^1.60.0",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "@hashicorp/design-system-components": "^3.0.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
