--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -52,14 +52,15 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/plugin-transform-typescript": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
     "@embroider/addon-dev": "^4.1.3",
     "@rollup/plugin-babel": "^6.0.4",
-    "@tsconfig/ember": "^3.0.0",
-    "@types/ember": "^4.0.3",
-    "@types/ungap__structured-clone": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@tsconfig/ember": "^3.0.3",
+    "@types/ember": "^4.0.10",
+    "@types/ungap__structured-clone": "^0.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "concurrently": "^7.2.1",
     "ember-cli-clipboard": "^1.0.0",
     "ember-inflector": "^4.0.2",
@@ -71,11 +72,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "rollup": "^2.77.3",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-ts": "3.2.0",
+    "rollup-plugin-ts": "3.4.5",
     "sass": "^1.60.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "@hashicorp/design-system-components": "^3.0.2"
