--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "yarn workspace @hashicorp/consul-ui-toolkit run build",
     "changeset": "changeset",
     "cleanup:local:toolkit": "yarn workspace @hashicorp/consul-ui-toolkit run cleanup:local",
-    "lint": "yarn workspaces run lint",
-    "lint:fix": "yarn workspaces run lint:fix",
+    "lint": "yarn workspaces foreach -A run lint",
+    "lint:fix": "yarn workspaces foreach -A run lint:fix",
     "prepare": "yarn build",
     "prerelease": "yarn prepare",
     "publish:local:toolkit": "yarn workspace @hashicorp/consul-ui-toolkit run publish:local",
@@ -17,12 +17,12 @@
     "start": "concurrently 'npm:start:*' --restart-after 5000 --prefix-colors cyan,white,yellow",
     "start:addon": "yarn workspace @hashicorp/consul-ui-toolkit run start",
     "start:documentation": "yarn workspace documentation run start",
-    "test": "yarn workspaces run test",
+    "test": "yarn workspaces -A run test",
     "watch:toolkit": "watchman watch-del-all && watchman-make -p '**/toolkit/src/**' -t build"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
-    "prettier": "^2.5.1"
+    "prettier": "^3.1.1"
   },
   "workspaces": [
     "toolkit",
