--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -35,7 +35,7 @@
     "@embroider/addon-shim": "^1.8.7",
     "@ungap/structured-clone": "^1.2.0",
     "ember-composable-helpers": "^5.0.0",
-    "ember-concurrency": "^2.3.7",
+    "ember-concurrency": "^3.1.1",
     "ember-concurrency-decorators": "^2.0.3"
   },
   "devDependencies": {
@@ -61,7 +61,7 @@
     "@types/ungap__structured-clone": "^0.3.3",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "concurrently": "^7.2.1",
+    "concurrently": "^8.2.2",
     "ember-cli-clipboard": "^1.0.0",
     "ember-inflector": "^4.0.2",
     "ember-template-lint": "^4.0.0",
@@ -79,7 +79,8 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "@hashicorp/design-system-components": "^3.0.2"
+    "@hashicorp/design-system-components": "^3.0.2",
+    "ember-source": "^3.28.0 || ^4.0.0 || >=5.0.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
