--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "build": "ember build --environment=production",
     "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
     "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
@@ -23,9 +25,12 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-proposal-decorators": "^7.23.6",
     "@ember/optional-features": "^2.0.0",
-    "@ember/string": "^3.0.1",
-    "@ember/test-helpers": "^2.9.3",
+    "@ember/string": "^3.1.1",
+    "@ember/test-helpers": "^3.2.1",
     "@embroider/test-setup": "^1.8.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
@@ -35,56 +40,59 @@
     "@types/qunit": "latest",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
-    "ember-auto-import": "^2.6.1",
-    "ember-cli": "~4.11.0",
-    "ember-cli-app-version": "^6.0.0",
-    "ember-cli-babel": "^7.26.11",
+    "ember-auto-import": "^2.7.0",
+    "ember-cli": "~5.5.0",
+    "ember-cli-app-version": "^6.0.1",
+    "ember-cli-babel": "^8.2.0",
+    "ember-cli-clean-css": "^3.0.0",
     "ember-cli-clipboard": "^1.0.0",
-    "ember-cli-dependency-checker": "^3.3.1",
-    "ember-cli-htmlbars": "^6.2.0",
+    "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-page-object": "^2.0.0",
+    "ember-cli-page-object": "^2.1.0",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-data": "~4.11.3",
+    "ember-data": "~5.3.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-fetch": "^8.1.2",
     "ember-focus-trap": "^1.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
-    "ember-page-title": "^7.0.0",
+    "ember-page-title": "^8.1.0",
     "ember-prism": "^0.13.0",
-    "ember-qunit": "^6.2.0",
-    "ember-resolver": "^10.0.0",
-    "ember-source": "~4.11.0",
+    "ember-qunit": "^8.0.2",
+    "ember-resolver": "^11.0.1",
+    "ember-source": "~5.5.0",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^5.6.0",
+    "ember-template-lint": "^5.13.0",
     "ember-truth-helpers": "^3.1.1",
     "ember-try": "^2.0.0",
     "ember-url-hash-polyfill": "^1.0.8",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-ember": "^11.12.0",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-qunit": "^8.0.1",
     "loader.js": "^4.7.0",
     "prettier": "^3.1.1",
-    "qunit": "^2.19.4",
+    "qunit": "^2.20.0",
     "qunit-dom": "^2.0.0",
     "sass": "^1.60.0",
     "sinon": "9.0.1",
-    "tracked-built-ins": "^3.1.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.1.0",
+    "tracked-built-ins": "^3.3.0",
     "typescript": "^4.7.4",
     "uuid": "^9.0.0",
-    "webpack": "^5.75.0"
+    "webpack": "^5.89.0"
   },
   "engines": {
-    "node": "16.* || >= 18"
+    "node": ">= 18"
   },
   "ember": {
     "edition": "octane"
