--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "concurrently 'npm:start:*' --restart-after 5000 --prefix-colors cyan,white,yellow",
     "start:addon": "yarn workspace @hashicorp/consul-ui-toolkit run start",
     "start:documentation": "yarn workspace documentation run start",
-    "test": "yarn workspaces -A run test",
+    "test": "yarn workspaces foreach -A run test",
     "watch:toolkit": "watchman watch-del-all && watchman-make -p '**/toolkit/src/**' -t build"
   },
   "devDependencies": {
