--- a/documentation/package.json
+++ b/documentation/package.json
@@ -37,28 +37,28 @@
     "@hashicorp/consul-ui-toolkit": "^3.0.0",
     "@hashicorp/design-system-components": "^3.3.0",
     "@hashicorp/ember-flight-icons": "^4.0.4",
-    "@types/qunit": "latest",
+    "@types/qunit": "^2.19.9",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
-    "ember-auto-import": "^2.7.0",
+    "ember-auto-import": "^2.7.1",
     "ember-cli": "~5.5.0",
     "ember-cli-app-version": "^6.0.1",
     "ember-cli-babel": "^8.2.0",
     "ember-cli-clean-css": "^3.0.0",
-    "ember-cli-clipboard": "^1.0.0",
+    "ember-cli-clipboard": "^1.1.0",
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-page-object": "^2.1.0",
+    "ember-cli-page-object": "^2.1.3",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-fetch": "^8.1.2",
-    "ember-focus-trap": "^1.0.1",
+    "ember-focus-trap": "^1.1.0",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^8.1.0",
@@ -70,25 +70,25 @@
     "ember-template-lint": "^5.13.0",
     "ember-truth-helpers": "^4.0.3",
     "ember-try": "^3.0.0",
-    "ember-url-hash-polyfill": "^1.0.8",
+    "ember-url-hash-polyfill": "^1.0.11",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-ember": "^11.12.0",
-    "eslint-plugin-n": "^16.4.0",
-    "eslint-plugin-prettier": "^5.1.0",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-prettier": "^5.1.1",
     "eslint-plugin-qunit": "^8.0.1",
     "loader.js": "^4.7.0",
     "prettier": "^3.1.1",
     "qunit": "^2.20.0",
     "qunit-dom": "^3.0.0",
-    "sass": "^1.60.0",
+    "sass": "^1.69.5",
     "sinon": "17.0.1",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
     "stylelint-prettier": "^5.0.0",
     "tracked-built-ins": "^3.3.0",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "webpack": "^5.89.0"
   },
   "engines": {
