--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "build": "ember build --environment=production",
     "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:css": "stylelint \"**/*.css\"",
-    "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
+    "lint:styles": "stylelint \"**/*.scss\"",
+    "lint:styles:fix": "concurrently \"npm:lint:styles -- --fix\"",
     "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
@@ -84,7 +84,7 @@
     "sass": "^1.69.5",
     "sinon": "17.0.1",
     "stylelint": "^16.0.2",
-    "stylelint-config-standard": "^35.0.0",
+    "stylelint-config-standard-scss": "^12.0.0",
     "stylelint-prettier": "^5.0.0",
     "tracked-built-ins": "^3.3.0",
     "typescript": "^5.3.3",
